Issue #16243: Remove extra spacing between top image and gray bar in header

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -47,6 +47,10 @@ section p {
 
 }
 
+#bannerLeft h1 {
+  margin: 0;
+}
+
 #bannerRight h1 {
   margin: 0;
 }
